work section - HTML code edited, backgrounds and colours adjusted

--- a/index.html
+++ b/index.html
@@ -118,43 +118,44 @@
 
     <section class="page-section p-5" id="work">
       <div class="container">
-        <h2 class="mb-5 text-center">Work</h2>
-          <div class="container h-100 mb-5 p-5" id="">
-            <div class="row h-100 m-3">
-              <div class="col-lg-12 my-auto mb-5 p-5" id="pro1">
+        <h2 class="mb-5 text-center text-success">Work</h2>
+
+          <div class="container m-0 p-0" id="">
+            <div class="row double-height-row m-3">
+              <div class="col-lg-12 my-auto mb-5 pt-0 pb-2 pl-0" id="pro1">
                 <div class="device-container">
-                  <h5 class="card-title">Chair</h5>
-                  <a href="#project1" class="btn btn-primary customBtn">See More</a>
+                  <h3 class="card-title text-white text-center bg-danger mb-5">Chair</h3>
+                  <a href="#project1" class="btn btn-outline-light customBtn">See More</a>
                 </div>
               </div>
             </div>
 
-            <div class="row h-100 m-3">
-              <div class="col-lg-6 col-md-12 my-auto mb-5 p-5" id="pro2">
+            <div class="row m-3">
+              <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="pro2">
                 <div class="device-container">
-                  <h5 class="card-title">T-Shirt</h5>
-                  <a href="#project2" class="btn btn-primary customBtn">See More</a>
+                  <h3 class="card-title text-white text-center bg-danger mb-5">T-Shirt</h3>
+                  <a href="#project2" class="btn btn-outline-light customBtn">See More</a>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-12 my-auto mb-5 p-5" id="pro3">
+              <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="pro3">
                 <div class="device-container">
-                  <h5 class="card-title">Logo</h5>
-                  <a href="#project3" class="btn btn-primary customBtn">See More</a>
+                  <h3 class="card-title text-white text-center bg-danger mb-5">Logo</h3>
+                  <a href="#project3" class="btn btn-outline-light customBtn">See More</a>
                 </div>
               </div>
             </div>
 
-            <div class="row h-100 m-3">
-              <div class="col-lg-6 col-md-12 my-auto mb-5 p-5" id="pro4">
+            <div class="row m-3">
+              <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="pro4">
                 <div class="device-container">
-                  <h5 class="card-title">Menu</h5>
-                  <a href="#project4" class="btn btn-primary customBtn">See More</a>
+                  <h3 class="card-title text-white text-center bg-danger mb-5">Menu</h3>
+                  <a href="#project4" class="btn btn-outline-light customBtn">See More</a>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-12 my-auto mb-5 p-5" id="pro5">
+              <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="pro5">
                 <div class="device-container">
-                  <h5 class="card-title">Room Decor</h5>
-                  <a href="#project5" class="btn btn-primary customBtn">See More</a>
+                  <h3 class="card-title text-white text-center bg-danger mb-5">Room Decor</h3>
+                  <a href="#project5" class="btn btn-outline-light customBtn">See More</a>
                 </div>
               </div>
             </div>
@@ -215,34 +216,34 @@
 
     <section class="page-section p-5" id="passion">
       <div class="container">
-      <h2 class="mb-5 text-center">Passions & Values</h2>
+      <h2 class="mb-5 text-center text-success">Passions & Values</h2>
         <div class="row">
           <div id="passion1" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/cooking.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Cooking</h5>
-              <p class="card-text">I have a great passion for cooking and food photography. I enjoy exploring new tastes when I travel and sharing photos of my culinary adventures. Trying new foods not only inspires me but also helps me develop in this area. If you'd like to discover more about my love for food, visit my <a href="https://www.instagram.com/hadzinskak/" target="_blank">Instagram</a></p>
+              <h5 class="card-title text-success">Cooking</h5>
+              <p class="card-text text-dark">I have a great passion for cooking and food photography. I enjoy exploring new tastes when I travel and sharing photos of my culinary adventures. Trying new foods not only inspires me but also helps me develop in this area. If you'd like to discover more about my love for food, visit my <a href="https://www.instagram.com/hadzinskak/" target="_blank">Instagram</a></p>
             </div>
           </div>
           <div id="passion2" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/drawing.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Drawing</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success">Drawing</h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
           <div id="passion3" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/painting.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Painting</h5>
-              <p class="card-text"> </p>
+              <h5 class="card-title text-success">Painting</h5>
+              <p class="card-text text-dark"> </p>
             </div>
           </div>
           <div id="passion4" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/skates.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Roller Skates</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success">Roller Skates</h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
         </div>
@@ -250,29 +251,29 @@
           <div id="passion5" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/embroidery.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Embroidery</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success">Embroidery</h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
           <div id="passion6" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/crochet.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Crochet</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success">Crochet</h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
           <div id="passion7" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/sewing.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Sewing</h5>
-              <p class="card-text"> </p>
+              <h5 class="card-title text-success">Sewing</h5>
+              <p class="card-text text-dark"> </p>
             </div>
           </div>
           <div id="passion8" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/decorating.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Decorating</h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success">Decorating</h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
         </div>
@@ -280,29 +281,29 @@
           <div id="passion9" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="./images/rabbit.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Rabbit</h5>
-              <p class="card-text">I am the happy owner of two beautiful rabbits, each with their own unique personalities that bring immense joy into my life. Designing a comfortable and engaging environment for them has become a delightful challenge that sparks my creativity. . To meet my adorable companions, hop over to their <a href="https://www.instagram.com/charlie.8.lola/" target="_blank">Instagram</a> account!</p>
+              <h5 class="card-title text-success">Rabbit</h5>
+              <p class="card-text text-dark">I am the happy owner of two beautiful rabbits, each with their own unique personalities that bring immense joy into my life. Designing a comfortable and engaging environment for them has become a delightful challenge that sparks my creativity. . To meet my adorable companions, hop over to their <a href="https://www.instagram.com/charlie.8.lola/" target="_blank">Instagram</a> account!</p>
             </div>
           </div>
           <div id="passion10" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success"></h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
           <div id="passion11" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text"> </p>
+              <h5 class="card-title text-success"></h5>
+              <p class="card-text text-dark"> </p>
             </div>
           </div>
           <div id="passion12" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success">
             <img src="https://via.placeholder.com/150" class="card-img-top" alt="Placeholder Image">
             <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text"></p>
+              <h5 class="card-title text-success"></h5>
+              <p class="card-text text-dark"></p>
             </div>
           </div>
         </div>
@@ -322,7 +323,7 @@
             <div class="col-lg-7 my-auto">
               <div class="header-content mx-auto">
                 <h1 class="text-center text-success mb-5">Chair Project</h1>
-                <p class="text-center" >Description of the project...</p>
+                <p class="text-center text-white" >Description of the project...</p>
               </div>
             </div>
           </div>
