edited work section, added projects with links

--- a/index.html
+++ b/index.html
@@ -148,6 +148,47 @@
         <h2 class="mb-5 text-center text-success">Work</h2>
           <!-- Nested Container for Work Projects -->
           <div class="container m-0 p-0" id="">
+            <!-- IT Project Section -->
+            <h3 class="mb-5 text-center text-success bg-white">IT Projects</h3>
+            <!-- First Row (Project 1) -->
+            <div class="row m-3">
+                <div class="col-lg-12 my-auto mb-5 pt-0 pb-2 pl-0" id="itPro1">
+                    <div class="image-container position-relative" id="projectBig">
+                        <!-- Project Title and Styling -->
+                        <a href="https://designs-by-kate.github.io/designs-by-kate-portfolio/">
+                            <img src="./images/portfolio.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <div class="image-title">Portfolio Project</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Row (Project 2 and Project 3) -->
+            <div class="row m-3">
+                <!-- Project 2 -->
+                <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="itPro2">
+                    <div class="image-container position-relative" id="projectSmall">
+                        <!-- Project Title and Styling -->
+                        <a href="https://designs-by-kate.github.io/HoriseonProject/">
+                            <img src="./images/horiseon.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <div class="image-title">Horiseon Project</div>
+                        </a>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="col-lg-6 col-md-12 my-auto mb-5 pt-0 pb-2 pl-0" id="itPro3">
+                    <div class="image-container position-relative" id="projectSmall">
+                        <!-- Project Title and Styling -->
+                        <a href="https://github.com/designs-by-kate">
+                            <img src="./images/GITHUB.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <div class="image-title">Github Projects</div>
+                          </a>
+                      </div>
+                </div>
+              </div>
+            </div>
+
+            <!--Design Project Section-->
+            <h3 class="mb-5 mt-5 text-center text-success bg-white">Design Projects</h3>
             <!-- First Row with Double Height (Fix Needed)-->
             <div class="row double-height-row m-3"> <!--double-height-row: custom class, created to this row have a double height compared to regular row -for some reason doesn't work, FIX NEEDED!!!-->
               <!-- Column for the First Project -->
