I created a new folder for readme photos, also i created assets folder to store: CSS and images file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kate // Web Developer</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 
   <!-- Custom fonts/icons for this template -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
@@ -25,7 +25,7 @@
     <!-- Navbar Collapse Section -->
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <!-- Logo Image -->
-      <img src="./images/logodesign.png" alt="My logo" class="logo img-fluid">
+      <img src="./assets/images/logodesign.png" alt="My logo" class="logo img-fluid">
       <!-- Navbar Links -->
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <!-- Home Link -->
@@ -132,7 +132,7 @@
             <!-- Device Container for Image -->
             <div class="device-container">
               <!-- About Section Image -->
-              <img src="./images/kate-bw.jpg" class="img-fluid rounded-circle" alt="My photo"> <!--img-fluid: ensures that the image scales proportionally with the width of its parent container, making it responsive to different screen sizes.-->
+              <img src="./assets/images/kate-bw.jpg" class="img-fluid rounded-circle" alt="My photo"> <!--img-fluid: ensures that the image scales proportionally with the width of its parent container, making it responsive to different screen sizes.-->
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
                     <div class="image-container position-relative" id="projectBig">
                         <!-- Project Title and Styling -->
                         <a href="https://designs-by-kate.github.io/designs-by-kate-portfolio/">
-                            <img src="./images/portfolio.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <img src="./assets/images/portfolio.png" alt="Image" class="img-fluid w-100 object-fit-cover">
                             <div class="image-title">Portfolio Project</div>
                         </a>
                     </div>
@@ -169,7 +169,7 @@
                     <div class="image-container position-relative" id="projectSmall">
                         <!-- Project Title and Styling -->
                         <a href="https://designs-by-kate.github.io/HoriseonProject/">
-                            <img src="./images/horiseon.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <img src="./assets/images/horiseon.png" alt="Image" class="img-fluid w-100 object-fit-cover">
                             <div class="image-title">Horiseon Project</div>
                         </a>
                     </div>
@@ -179,7 +179,7 @@
                     <div class="image-container position-relative" id="projectSmall">
                         <!-- Project Title and Styling -->
                         <a href="https://github.com/designs-by-kate">
-                            <img src="./images/GITHUB.png" alt="Image" class="img-fluid w-100 object-fit-cover">
+                            <img src="./assets/images/GITHUB.png" alt="Image" class="img-fluid w-100 object-fit-cover">
                             <div class="image-title">Github Projects</div>
                           </a>
                       </div>
@@ -250,7 +250,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"> <!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp1">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/diet.jpg" alt="diet">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/diet.jpg" alt="diet">
               <!-- Title and Description -->
               <h5 class="text-center">Dietitian</h5>
               <p class="fw-light mb-0"></p>
@@ -260,7 +260,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"><!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp2">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/bg.png" alt="maternity">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/bg.png" alt="maternity">
               <!-- Title and Description -->
               <h5 class="text-center">Maternity</h5>
               <p class="fw-light mb-0"></p>
@@ -270,7 +270,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"><!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp3">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/cooking.jpg" alt="cooking">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/cooking.jpg" alt="cooking">
               <!-- Title and Description -->
               <h5 class="text-center">Cooking</h5>
               <p class="fw-light mb-0"></p>
@@ -280,7 +280,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"><!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp4">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/dentistry.jpg" alt="dentistry">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/dentistry.jpg" alt="dentistry">
               <!-- Title and Description -->
               <h5 class="text-center">Dentistry</h5>
               <p class="fw-light mb-0"></p>
@@ -290,7 +290,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"><!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp5">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/designing.jpg" alt="designing">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/designing.jpg" alt="designing">
               <!-- Title and Description -->
               <h5 class="text-center">Designing</h5>
               <p class="fw-light mb-0"></p>
@@ -300,7 +300,7 @@
           <div class="col-lg-2 col-md-4 col-sm-6"><!--responsive classes-->
             <div class="experience-item mx-auto mb-5 mb-lg-0" id="exp6">
               <!-- Image for this experience -->
-              <img class="img-fluid rounded-circle mb-3" src="./images/programming.png" alt="programming">
+              <img class="img-fluid rounded-circle mb-3" src="./assets/images/programming.png" alt="programming">
               <!-- Title and Description -->
               <h5 class="text-center">Programming</h5>
               <p class="fw-light mb-0"></p>
@@ -321,7 +321,7 @@
           <!--passion 1-->
           <div id="passion1" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/cooking.jpg" class="card-img-top" alt="cooking Image">
+            <img src="./assets/images/cooking.jpg" class="card-img-top" alt="cooking Image">
              <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Cooking</h5>
@@ -335,7 +335,7 @@
           <!--passion 2-->
           <div id="passion2" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/drawing.jpg" class="card-img-top" alt="drawing Image">
+            <img src="./assets/images/drawing.jpg" class="card-img-top" alt="drawing Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Drawing</h5>
@@ -345,7 +345,7 @@
           <!--passion 3-->
           <div id="passion3" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/painting.jpg" class="card-img-top" alt="painting Image">
+            <img src="./assets/images/painting.jpg" class="card-img-top" alt="painting Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Painting</h5>
@@ -355,7 +355,7 @@
           <!--passion 4-->
           <div id="passion4" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/skates.jpg" class="card-img-top" alt="skates Image">
+            <img src="./assets/images/skates.jpg" class="card-img-top" alt="skates Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Roller Skates</h5>
@@ -368,7 +368,7 @@
           <!--passion 5-->
           <div id="passion5" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/embroidery.jpg" class="card-img-top" alt="embroidery Image">
+            <img src="./assets/images/embroidery.jpg" class="card-img-top" alt="embroidery Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Embroidery</h5>
@@ -378,7 +378,7 @@
           <!--passion 6-->
           <div id="passion6" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/crochet.jpg" class="card-img-top" alt="crochet Image">
+            <img src="./assets/images/crochet.jpg" class="card-img-top" alt="crochet Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Crochet</h5>
@@ -388,7 +388,7 @@
           <!--passion 7-->
           <div id="passion7" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/sewing.jpg" class="card-img-top" alt="sewing Image">
+            <img src="./assets/images/sewing.jpg" class="card-img-top" alt="sewing Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Sewing</h5>
@@ -398,7 +398,7 @@
           <!--passion 8-->
           <div id="passion8" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/decorating.jpg" class="card-img-top" alt="decorating Image">
+            <img src="./assets/images/decorating.jpg" class="card-img-top" alt="decorating Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Decorating</h5>
@@ -411,7 +411,7 @@
           <!--passion 9-->
           <div id="passion9" class="card col-lg-3 col-md-6 col-sm-12 mb-5 p-5 border border-success"> <!--responsive classes-->
             <!-- Card image -->
-            <img src="./images/rabbit.jpg" class="card-img-top" alt="rabbit Image">
+            <img src="./assets/images/rabbit.jpg" class="card-img-top" alt="rabbit Image">
             <!-- Card content -->
             <div class="card-body">
               <h5 class="card-title text-success">Rabbit</h5>
@@ -464,7 +464,7 @@
             <!-- Left Column: Displaying Project Image -->
             <div class="col-lg-5 my-auto">
               <div class="device-container">
-                <img src="./images/chair.jpg" class="img-fluid rounded" alt="Chair Project Image">
+                <img src="./assets/images/chair.jpg" class="img-fluid rounded" alt="Chair Project Image">
               </div>
             </div>
             <!-- Right Column: Displaying Chair Project Title and Description -->
@@ -489,7 +489,7 @@
             <!-- Right Column: Displaying Chair Project Image -->
             <div class="col-lg-5 my-auto">
               <div class="device-container">
-                <img src="./images/T-shirt.jpg" class="img-fluid rounded" alt="T-Shirt Project Image">
+                <img src="./assets/images/T-shirt.jpg" class="img-fluid rounded" alt="T-Shirt Project Image">
               </div>
             </div>
           </div>
@@ -500,7 +500,7 @@
             <!-- Left Column: Displaying Chair Project Image -->
             <div class="col-lg-5 my-auto">
               <div class="device-container">
-                <img src="./images/logodesign.png" class="img-fluid rounded" alt="Logo Project Image">
+                <img src="./assets/images/logodesign.png" class="img-fluid rounded" alt="Logo Project Image">
               </div>
             </div>
             <!-- Right Column: Displaying Chair Project Title and Description -->
@@ -525,7 +525,7 @@
             <!-- Right Column: Displaying Chair Project Image -->
             <div class="col-lg-5 my-auto">
               <div class="device-container">
-                <img src="./images/menu.jpg" class="img-fluid rounded" alt="Menu Project Image">
+                <img src="./assets/images/menu.jpg" class="img-fluid rounded" alt="Menu Project Image">
               </div>
             </div>
           </div>
@@ -536,7 +536,7 @@
             <!-- Left Column: Displaying Chair Project Image -->
             <div class="col-lg-5 my-auto">
               <div class="device-container">
-                <img src="./images/decorating.jpg" class="img-fluid rounded" alt="Room Decor Project Image">
+                <img src="./assets/images/decorating.jpg" class="img-fluid rounded" alt="Room Decor Project Image">
               </div>
             </div>
             <!-- Right Column: Displaying Chair Project Title and Description -->
