added media to adjusted heading

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- Fluid Container for Text Content -->
         <div class="container-fluid text-center">
           <!-- Hero Banner Title -->
-          <h1 class="display-4 text-success mb-3">Embracing life as an ever-evolving journey</h1> <!--display-4: sets the size of the heading to a large and prominent display level. -->
+          <h1 class="display-4 text-success mb-3 customHeading">Embracing life as an ever-evolving journey</h1> <!--display-4: sets the size of the heading to a large and prominent display level. -->
           <!-- Hero Banner Lead Paragraph 1 -->
           <p class="lead text-dark">I find strength in the lessons learned from every experience. </p> <!--lead: making it larger and slightly more prominent than regular paragraphs-->
           <!-- Hero Banner Lead Paragraph 2 -->
@@ -109,7 +109,7 @@
 
   <main class="page-wrapper">
     <!-- About Section -->
-    <section class="page-section p-5" id="about">
+    <section class="page-section p-lg-5 p-md-5 pd-sm-2" id="about">
       <!-- Container for About Section -->
       <div class="container h-100"> <!--h-100: sets the height of an element to 100% of its containing element. -->
         <!-- Row for Content Alignment -->
@@ -119,7 +119,7 @@
             <!-- Content Wrapper -->
             <div class="header-content mx-auto"> <!--mx-auto: ensures that the content inside this div will be horizontally centered within its parent container.-->
               <!-- About Section Title -->
-              <h1 class="text-center text-success mb-5">Life is a constant lesson.</br> I've embraced each challenge as an opportunity to grow.</h1>
+              <h1 class="text-center text-success mb-lg-5 mb-md-5 mb-sm-3 customHeading">Life is a constant lesson.</br> I've embraced each challenge as an opportunity to grow.</h1>
               <!-- About Section Paragraph -->
               <p class="text-center" >I believe that through hard work and perseverance, we can achieve remarkable things.
                 My journey is fueled by a deep passion for learning, a commitment to continuous improvement, and the belief that success comes to those who work tirelessly toward their goals. I value the wisdom gained from every experience and cherish the lessons learned from others.
@@ -141,7 +141,7 @@
 
     <!-- portfolio container -->
     <!-- Work Section -->
-    <section class="page-section p-5" id="work">
+    <section class="page-section p-lg-5" id="work">
       <!-- Container for Work Section -->
       <div class="container">
         <!-- Work Section Title -->
